<resources>
    <string name="app_name">Blood Bank</string>
    <string name="title_bList_activity">Requests By Blood Type</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">SaveLife</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_name">fullname</string>
    <string name="hint_blood_type">blood type</string>
    <string name="hint_mobile_number">mobile number</string>
    <string name="hint_search_range">search range(km)</string>
    <string name="hint_message_box">reason(max 40 chars)</string>
    <string name="hint_address_box">address of donation</string>
    <string name="hint_pints_needed">pints needed</string>
    <string name="hint_last_donated">date last donated</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_save">Save</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your registered email id.</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Menu titles for navigation drawer -->
    <string name = "nav_home">Home/Search</string>
    <string name = "nav_requests">Requests</string>
    <string name = "nav_edit_profile">Edit Profile</string>
    <string name = "nav_user_logout">Logout</string>
    <string name = "nav_about_us">About Us</string>
    <string name = "nav_rate_us">Rate Us</string>
    <string name = "nav_user_delete">Delete Profile</string>
     <string name="sms_permission_rationale">"SMS permissions are needed for sending SMS."
    </string>
     <string name="location_permission_rationale">"location permissions needed for searching."
    </string>
    <string name="call_permission_rationale">"call permissions required."
    </string>
    <!-- Toolbar titles for navigation drawer -->
    <string-array name="nav_item_activity_titles">
        <item>Search</item>
        <item>Requests</item>
        <item>Profile</item>
        <item>Log out</item>
        <item>About Us</item>
        <item>Rate Us</item>
        <item>Delete</item>
    </string-array>
    <!--blood type-->
    <string-array name="btype_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
</resources>
