<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:layout_below="@+id/main_linear_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:hint="@string/hint_mobile_number"
                android:maxLength="10"
                android:layout_below="@+id/btype_spinner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_phone"
            android:orientation="horizontal"
            android:id="@+id/linear_layout_spinner"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/text_btype_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginRight="50dp"
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:text="@string/hint_blood_type" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_btype"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="100dp"
                android:layout_height="wrap_content"

                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/linear_layout_spinner"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/text_date_donated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_marginRight="50dp"
            android:textSize="20dp"
            android:text="@string/hint_last_donated"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/lastDonated"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:text="00/00/00"
            android:background="@android:drawable/btn_default"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_phone"
            />
    </LinearLayout>
    <Button
        android:text="Save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/black"
        android:layout_below="@+id/lastDonated"
        android:layout_marginTop="43dp"
        android:layout_gravity="center"
        android:id="@+id/editSave" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>
